--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-Hello World
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Lake Mendota Weather</title>
+  </head>
+  <body>
+    <h1>Water Temp</h1>
+    <p>PLOT</p>
+    <h1>Winds Speed and Direction</h1>
+    <p>PLOT</p>
+    <h1>Air Temp</h1>
+    <p>PLOT</p>
+  </body>
+</html>
