Adding WaterTemp image

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>Water Temp</h1>
-    <p>PLOT</p>
+    <img src="waterTemp.png" alt="No Image Found" />
     <h1>Winds Speed and Direction</h1>
     <p>PLOT</p>
     <h1>Air Temp</h1>
